fix: add flex wrap

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ img {
     display: flex;
     justify-content: center;
     gap: 10px;
+    flex-wrap: wrap;
 }
 
 .nav__item {
